[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "apiwx"
version = "0.5.12"
description = "wxPython API wrapper with enhanced font handling, improved panel mixins, fixed virtual scroll sizing, and comprehensive IDE support"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "edamame"}
]
keywords = ["wxpython", "gui", "wrapper", "mixins", "metaclass", "filedialog"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]
requires-python = ">=3.11"
dependencies = [
    "wxPython>=4.2.0"
]

[tool.setuptools]
packages = ["apiwx"]
include-package-data = true

[tool.setuptools.package-data]
apiwx = ["py.typed", "stubs/*.pyi", "stubs/py.typed", "stubs/README.md"]

# Optional dependencies for type checking
[project.optional-dependencies]
typing = []  # No additional dependencies needed, stubs are included
dev = ["mypy>=1.0", "pylsp-mypy"]

# Type checking configuration
[tool.mypy]
packages = ["apiwx"]
strict = true

[tool.pylsp-mypy]
enabled = true
live_mode = true

# Build automation specific configuration
[tool.build-automation]
version-files = [
    "pyproject.toml",
    "setup.cfg", 
    "apiwx/__init__.py"
]
test-command = "python test/run_tests.py"
require-100-percent-success = true
clean-before-build = true
create-wheel = true
create-source = true