[metadata]
name = apiwx
version = 0.1.16
author = edamame
description = wxPython API wrapper
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.13
include_package_data = True
install_requires = 
    wxPython>=4.2.0

[options.packages.find]
where = .
include = apiwx*